--- a/docs/assets/css/sass/subpages/montering.scss
+++ b/docs/assets/css/sass/subpages/montering.scss
@@ -139,6 +139,7 @@
 
 #assembly-video video {
   max-height: 90%;
+  max-width: 100%;
 }
 
 @media screen and (min-width: 800px) {
